# NMR-BioSim

./: .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: NMR_MD-ci.yaml  example_package_project-ci.yaml  release.yaml
NMR-MD/: __init__.py
NMR_MD/: __init__.py  macro95_final.py
docs/source/: conf.py  index.rst
example_package/: example.py
tests/: conftest.py
tests/test_example_package/: test_example.py
