[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "NMR_MD"
dynamic = ["version"]

description = "NMR restrained MD workflows"
authors = [
    { name = "Hima Bindu Kolli", email = "hima-bindu.kolli@stfc.ac.uk" },
]
maintainers = [
    { name = "Hima Bindu Kolli", email = "hima-bindu.kolli@stfc.ac.uk" }
]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

keywords = ["template", "python", "package"]

dependencies = [
    "PyQt5>=5.15.11,<6.0",
]

[project.urls]
Homepage = "https://github.com/CCPBioSim/Python-Template/"
Repository = "https://github.com/CCPBioSim/Python-Template.git"
Documentation = "https://Python-Template.github.io/"

#
# Optional dependency groups
#

[project.optional-dependencies]
testing = [
    "pytest>=9.0,<10.0",
    "pytest-cov>=7.0,<8.0",
    "pytest-sugar>=1.1,<2.0"
]

pre-commit = [
    "ruff>=0.14.8",
    "pre-commit>=4.5,<5.0",
    "pylint>=4.0,<5.0"
]

docs = [
    "sphinx>=9,<10",
    "nbsphinx>=0.9,<1.0",
    "sphinx_rtd_theme>=3,<3.2",
    "sphinx_copybutton>=0.5,<1.0",
    "sphinxcontrib-contentui>=0.2,<1.0",
    "sphinxcontrib-details-directive>=0.1,<1.0",
    "furo>=2025.0,<2026.0",
    "markupsafe>=3.0,<4.0"
]

# Run `example-cli` mapped to a Python function
[project.scripts]
# NMR_MD = "NMR_MD.macro95_final"  # Uncomment and modify if you add CLI scripts

#
# Ruff configuration inside pyproject (recommended)
#

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
exclude = ["docs/*", "build/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # base checks + import sort
ignore = ["E501"]              # override if long lines ok (depends on preference)
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

#
# Pytest configuration
#

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--cov=NMR_MD --cov-report=term-missing"
testpaths = ["tests"]
